--- a/atividade2.html
+++ b/atividade2.html
@@ -10,26 +10,26 @@
     <h1>PACCE</h1>
     <nav>
             <a href="http://www.pacce.ufc.br/#">Sobre</a> |
-            <a href="http://www.pacce.ufc.br/comissoes">Comissões</a> |
-            <a href="http://www.pacce.ufc.br/celulas">Células</a> |
+            <a href="http://www.pacce.ufc.br/comissoes">ComissÃµes</a> |
+            <a href="http://www.pacce.ufc.br/celulas">CÃ©lulas</a> |
     </nav>
     <article>
         <h2>Seja Bem-Vindo!</h2>
         <p>
-            O Programa de Aprendizagem Cooperativa em Células Estudantis é um programa de bolsas de monitoria da Escola Integrada de Desenvolvimento e Inovação Acadêmica da UFC que tem como principal objetivo colaborar para o aumento da taxa de conclusão nos cursos de graduação da UFC. A principal estratégia utilizada é a difusão de Células Estudantis - grupos de estudo que utilizam a metodologia de Aprendizagem Cooperativa.
+            O Programa de Aprendizagem Cooperativa em CÃ©lulas Estudantis Ã© um programa de bolsas de monitoria da Escola Integrada de Desenvolvimento e InovaÃ§Ã£o AcadÃ©mica da UFC que tem como principal objetivo colaborar para o aumento da taxa de conclusÃ£o nos cursos de graduaÃ§Ã£o da UFC. A principal estratÃ©gia utilizada Ã© a difusÃ£o de CÃ©lulas Estudantis - grupos de estudo que utilizam a metodologia de Aprendizagem Cooperativa.
         </p>
     </article>
     <article>
         <section>
             <h2>habilidades sociais no processo de ensino</h2>
             <p>
-                Neste artigo o autor discorre acerca de uma obra que versa sobre o processo terapeutico, para então associar como as habilidades sociais influenciam na recuperação dos pacientes. Versando de maneira discursiva o autor analisa como o acompanhamento social influi no momento de lidar com situações nas quais o paciente tenha de interagir e cumprir tarefas com a autoestima elevada. Associado a isso, há uma análise baseada em um manual de habilidade sociais, as quais são divididas em etapas em que devem ser aplicadas no processo de terapia com a finalidade de melhorar a recuperação do paciente. Autores mais citados: Vicent Caballow e Yrving Yalon.
+                Neste artigo o autor discorre acerca de uma obra que versa sobre o processo terapeutico, para entÃ£o associar como as habilidades sociais influenciam na recuperaÃ§Ã£o dos pacientes. Versando de maneira discursiva o autor analisa como o acompanhamento social influi no momento de lidar com situaÃ§Ãµes nas quais o paciente tenha de interagir e cumprir tarefas com a autoestima elevada. Associado a isso, hÃ¡ uma anÃ¡lise baseada em um manual de habilidade sociais, as quais sÃ£o divididas em etapas em que devem ser aplicadas no processo de terapia com a finalidade de melhorar a recuperaÃ§Ã£o do paciente. Autores mais citados: Vicent Caballow e Yrving Yalon.
             </p>
         </section>
         <section>
-            <h2>Aprendizagem cooperativa Ensino de matemática</h2>
+            <h2>Aprendizagem cooperativa Ensino de matemÃ¡tica</h2>
             <p>
-                Este artigo utiliza métodos de aprendizagem cooperativa direcionados para o ensino de matemática em um turma do 5º ano do ensino fundamental. O estudo está focado em analisar a evolução dos alunos de maneira qualitativa e quantitativa com relação às concepções e atitudes face às competências desenvolvidas ou adquiridas na disciplina em questão. Os resultados obtidos confirmaram o que muitos estudiosos, não só da área da matemática, já haviam constatado, ou seja, o melhor rendimento no aprendizado se comparado com os métodos tradicionais de ensino.
+                Este artigo utiliza mÃ©todos de aprendizagem cooperativa direcionados para o ensino de matemÃ¡tica em um turma do 5Âº ano do ensino fundamental. O estudo estÃ¡ focado em analisar a evoluÃ§Ã£o dos alunos de maneira qualitativa e quantitativa com relaÃ§Ã£o as concepÃ§Ãµes e atitudes face as competÃªncias desenvolvidas ou adquiridas na disciplina em questÃ£o. Os resultados obtidos confirmaram o que muitos estudiosos, nÃ£o sÃ³ da Ã¡rea da matemÃ¡tica, jÃ¡ haviam constatado, ou seja, o melhor rendimento no aprendizado se comparado com os mÃ©todos tradicionais de ensino.
                 <a href="https://drive.google.com/file/d/0B3GVoYjj-41Bc0t5YTRMQ2NBcUk/view?usp=drive_web">Mais+</a> 
             </p>
         </section>
@@ -52,12 +52,12 @@
             <audio controls>
                 <source src="musica.ogg" type="audio/ogg">
                 <source src="musica.mp3" type="audio/mpeg">
-               Seu navegador não suporta elemento audio
+               Seu navegador nï¿½o suporta elemento audio
             </audio>
             <video width="320" height="240" controls>
                     <source src="video.mp4" type="video/mp4">
                     <source src="video.ogg" type="video/ogg">
-                    Seu navegador não suporta vídeo
+                    Seu navegador nï¿½o suporta vï¿½deo
             </video>
     </article>
     <article>
@@ -66,19 +66,19 @@
                     Nome:<br>
                     <input type="text" name="nome" min="1" max="15">
                     <br>
-                    <input type="text" name="none" value="Não modificar" value disabled><br><br>
-                    Número:
+                    <input type="text" name="none" value="Nï¿½o modificar" value disabled><br><br>
+                    Nï¿½mero:
                     <input type="number" name="quantidade"  min="25000" max="30000"/><br><br>
                     <input type="radio" name="gender" value="homem" checked> Homem<br>
                     <input type="radio" name="gender" value="mulher" checked> Mulher<br>
                     <input type="radio" name="gender" value="outros"> Outro<br><br>
-                    <input type="checkbox" name="vehicle1" value="com célula">Eu tenho célula<br>
-                    <input type="checkbox" name="vehicle2" value="sem célula" checked>Eu não tenho célula<br><br>
+                    <input type="checkbox" name="vehicle1" value="com cï¿½lula">Eu tenho cï¿½lula<br>
+                    <input type="checkbox" name="vehicle2" value="sem cï¿½lula" checked>Eu nï¿½o tenho cï¿½lula<br><br>
                     <input type="submit">
             </form>
     </article><br>
     <footer>
-            © Programa de Aprendizagem Cooperativa em Células Estudantis 2009 - 2017
+            ï¿½ Programa de Aprendizagem Cooperativa em Cï¿½lulas Estudantis 2009 - 2017
     </footer>
 </body>
 </html>
