--- a/atividade5/atividade5.html
+++ b/atividade5/atividade5.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lms</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="atividade5.css">
 </head>
 
 <body>
@@ -20,10 +20,10 @@
 
     <header class="topo">
         <button class="toggle">&#9776;</button>
-        <h1 class="logo">Título</h1>
+        <h1 class="logo">TÃ­tulo</h1>
     </header>
 
-    <script src="script.js"></script>    
+    <script src="atividade5.js"></script>    
     <div class= "sanfona">
         <div class="accordeon">
             <h1>Primeiro paragrafo</h1>
