--- a/trabalho1/trabalho1.html
+++ b/trabalho1/trabalho1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>Atividade5</title>
+    <link rel="stylesheet" href="trabalho1.css">
+    <title>Trabalho1</title>
 
 </head>
 <body>
@@ -19,7 +19,7 @@
                         </div>
                         <div class="dropdown-list">
                             <ul>
-                                <li><a href="">pavê</a></li>
+                                <li><a href="">pavÃª</a></li>
                                 <li><a href="">Molho</a></li>
                                 <li><a href="">Torta</a></li>
                             </ul>
@@ -41,7 +41,7 @@
             </ul>
         </nav>
     <div>
-        <div class="animação"></div>
+        <div class="animaÃ§Ã£o"></div>
     </div>
     </header>
 </body>
