--- a/trabalho2/trabalho2.html
+++ b/trabalho2/trabalho2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BatePapo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="trabalho2.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -19,7 +19,7 @@
                     <div class="buttons">
                         <i title="Login" class="material-icons">&#xE890;</i>
                         <i title="Nova conversa" class="material-icons">&#xE0B7;</i>
-                        <i title="Definições" class="material-icons">&#xE5D4;</i>
+                        <i title="DefiniÃ§Ãµes" class="material-icons">&#xE5D4;</i>
                     </div>
                 </header>
                 <div id="lista-contatos">
@@ -30,11 +30,11 @@
                     <img src="contato.png" />
                     <div class="buttons">
                         <i title="Anexar arquivo" class="material-icons">&#xE226;</i>
-                        <i title="Definições" class="material-icons">&#xE5D4;</i>
+                        <i title="DefiniÃ§Ãµes" class="material-icons">&#xE5D4;</i>
                     </div>
                     <div Class="status"></div>
                     <b id="contato-conversa">Nome</b><br/>
-                    <span>Última visualização hoje as 13:35</span>
+                    <span>ultima visualizaÃ§Ã£o hoje as 13:35</span>
                 </header>
                 <div id="lista-mensagens">
                     <div id="logo-conteudo">
@@ -49,6 +49,6 @@
             </article>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="trabalho2.js"></script>
 </body>
 </html>
