--- a/atividade3/atividade3.html
+++ b/atividade3/atividade3.html
@@ -4,32 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="atividade3.css">
     <title>PACCE</title>
 </head>
 <body>
     <h1>PACCE</h1>
     <nav>
             <a href="http://www.pacce.ufc.br/#">Sobre</a> |
-            <a href="http://www.pacce.ufc.br/comissoes">Comissıes</a> |
-            <a href="http://www.pacce.ufc.br/celulas">CÈlulas</a> |
+            <a href="http://www.pacce.ufc.br/comissoes">Comiss√µes</a> |
+            <a href="http://www.pacce.ufc.br/celulas">C√©lulas</a> |
     </nav>
     <article>
         <h2>Seja Bem-Vindo!</h2>
         <p>
-            O Programa de Aprendizagem Cooperativa em CÈlulas Estudantis È um programa de bolsas de monitoria da Escola Integrada de Desenvolvimento e InovaÁ„o AcadÍmica da UFC que tem como principal objetivo colaborar para o aumento da taxa de conclus„o nos cursos de graduaÁ„o da UFC. A principal estratÈgia utilizada È a difus„o de CÈlulas Estudantis - grupos de estudo que utilizam a metodologia de Aprendizagem Cooperativa.
+            O Programa de Aprendizagem Cooperativa em C√©lulas Estudantis √© um programa de bolsas de monitoria da Escola Integrada de Desenvolvimento e Inova√ß√£oo Academica da UFC que tem como principal objetivo colaborar para o aumento da taxa de conclus√£o nos cursos de gradua√ß√£o da UFC. A principal estrat√©gia utilizada √© a difus√£o de C√©lulas Estudantis - grupos de estudo que utilizam a metodologia de Aprendizagem Cooperativa.
         </p>
     </article>
     <article>
         <section>
             <h2>habilidades sociais no processo de ensino</h2>
             <p>
-                Neste artigo o autor discorre acerca de uma obra que versa sobre o processo terapeutico, para ent„o associar como as habilidades sociais influenciam na recuperaÁ„o dos pacientes. Versando de maneira discursiva o autor analisa como o acompanhamento social influi no momento de lidar com situaÁıes nas quais o paciente tenha de interagir e cumprir tarefas com a autoestima elevada. Associado a isso, h· uma an·lise baseada em um manual de habilidade sociais, as quais s„o divididas em etapas em que devem ser aplicadas no processo de terapia com a finalidade de melhorar a recuperaÁ„o do paciente. Autores mais citados: Vicent Caballow e Yrving Yalon.
+                Neste artigo o autor discorre acerca de uma obra que versa sobre o processo terapeutico, para ent√£o associar como as habilidades sociais influenciam na recupera√ß√£o dos pacientes. Versando de maneira discursiva o autor analisa como o acompanhamento social influi no momento de lidar com situa√ß√µes nas quais o paciente tenha de interagir e cumprir tarefas com a autoestima elevada. Associado a isso, h√° uma an√°lise baseada em um manual de habilidade sociais, as quais s√£o divididas em etapas em que devem ser aplicadas no processo de terapia com a finalidade de melhorar a recupera√ß√£o do paciente. Autores mais citados: Vicent Caballow e Yrving Yalon.
             </p>
         </section>
         <section>
-            <h2>Aprendizagem cooperativa Ensino de matem·tica</h2>
+            <h2>Aprendizagem cooperativa Ensino de matem√°tica</h2>
             <p>
-                Este artigo utiliza mÈtodos de aprendizagem cooperativa direcionados para o ensino de matem·tica em um turma do 5∫ ano do ensino fundamental. O estudo est· focado em analisar a evoluÁ„o dos alunos de maneira qualitativa e quantitativa com relaÁ„o ‡s concepÁıes e atitudes face ‡s competÍncias desenvolvidas ou adquiridas na disciplina em quest„o. Os resultados obtidos confirmaram o que muitos estudiosos, n„o sÛ da ·rea da matem·tica, j· haviam constatado, ou seja, o melhor rendimento no aprendizado se comparado com os mÈtodos tradicionais de ensino.
+                Este artigo utiliza m√©todos de aprendizagem cooperativa direcionados para o ensino de matem√°tica em um turma do 5¬∫ ano do ensino fundamental. O estudo est√° focado em analisar a evolu√ß√£o dos alunos de maneira qualitativa e quantitativa com rela√ß√£o as concep√ß√µes e atitudes face √†s compet√™ncias desenvolvidas ou adquiridas na disciplina em quest√£o. Os resultados obtidos confirmaram o que muitos estudiosos, n√£o s√≥ da area da matem√°tica, j√° haviam constatado, ou seja, o melhor rendimento no aprendizado se comparado com os m√©todos tradicionais de ensino.
                 <a href="https://drive.google.com/file/d/0B3GVoYjj-41Bc0t5YTRMQ2NBcUk/view?usp=drive_web">Mais+</a> 
             </p>
         </section>
@@ -52,12 +53,12 @@
             <audio controls>
                 <source src="musica.ogg" type="audio/ogg">
                 <source src="musica.mp3" type="audio/mpeg">
-               Seu navegador n„o suporta elemento audio
+               Seu navegador n√£o suporta elemento audio
             </audio>
             <video width="320" height="240" controls>
                     <source src="video.mp4" type="video/mp4">
                     <source src="video.ogg" type="video/ogg">
-                    Seu navegador n„o suporta vÌdeo
+                    Seu navegador n√£o suporta v√≠deo
             </video>
     </article>
     <article>
@@ -66,19 +67,19 @@
                     Nome:<br>
                     <input type="text" name="nome" min="1" max="15">
                     <br>
-                    <input type="text" name="none" value="N„o modificar" value disabled><br><br>
-                    N˙mero:
+                    <input type="text" name="none" value="N√£o modificar" value disabled><br><br>
+                    N√∫mero:
                     <input type="number" name="quantidade"  min="25000" max="30000"/><br><br>
                     <input type="radio" name="gender" value="homem" checked> Homem<br>
                     <input type="radio" name="gender" value="mulher" checked> Mulher<br>
                     <input type="radio" name="gender" value="outros"> Outro<br><br>
-                    <input type="checkbox" name="vehicle1" value="com cÈlula">Eu tenho cÈlula<br>
-                    <input type="checkbox" name="vehicle2" value="sem cÈlula" checked>Eu n„o tenho cÈlula<br><br>
+                    <input type="checkbox" name="vehicle1" value="com c√©lula">Eu tenho c√©lula<br>
+                    <input type="checkbox" name="vehicle2" value="sem c√©lula" checked>Eu n√£o tenho c√©lula<br><br>
                     <input type="submit">
             </form>
     </article><br>
     <footer>
-            © Programa de Aprendizagem Cooperativa em CÈlulas Estudantis 2009 - 2017
+             Programa de Aprendizagem Cooperativa em CÔøΩlulas Estudantis 2009 - 2018
     </footer>
 </body>
 </html>
